Closed Bug 1028036 Opened 11 years ago Closed 11 years ago

clang++ -stdlib=libc++ build fails: layout/style/nsAnimationManager.h:113:29: error: unknown type name 'TimeStamp'

Categories

(Core :: CSS Parsing and Computation, defect)

All
FreeBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla33

People

(Reporter: jbeich, Assigned: jbeich)

References

Details

Attachments

(1 file)

In file included from gfx/layers/Unified_cpp_gfx_layers2.cpp:184: In file included from gfx/layers/composite/AsyncCompositionManager.cpp:23: ../../dist/include/nsAnimationManager.h:113:29: error: unknown type name 'TimeStamp' TimeStamp aRefreshTime, ^ 1 error generated.
Attached patch fixSplinter Review
Attachment #8443337 - Flags: review?(birtles)
Comment on attachment 8443337 [details] [diff] [review] fix Review of attachment 8443337 [details] [diff] [review]: ----------------------------------------------------------------- Thanks for fixing this! (Although I'm not quite sure how to avoid creating similar problems in future since I'm mostly building on Windows and tinderbox doesn't seem to apply this setting.)
Attachment #8443337 - Flags: review?(birtles) → review+
Keywords: checkin-needed
Also affected openbsd/amd64/clang-with-libstdc++, so i adjusted the commit msg accordingly. see http://buildbot.rhaalovely.net/builders/mozilla-central-amd64/builds/1160/steps/build/logs/stdio for the full error. https://hg.mozilla.org/integration/mozilla-inbound/rev/5cf9282e5bc5
Keywords: checkin-needed
Assignee: nobody → jbeich
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
Blocks: 1029927
Blocks: 1029948
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: